postgres-macros/tests/fail/no_args.rs
fn main() {
    sqlm_postgres_macros::sql!("foobar {}");
}
