postgres-macros/tests/fail/no_args.stderr
error: missing argument for position 0
 --> tests/fail/no_args.rs:2:32
  |
2 |     sqlm_postgres_macros::sql!("foobar {}");
  |                                ^^^^^^^^^^^
